--- a/utils/modal.css
+++ b/utils/modal.css
@@ -54,6 +54,14 @@
 
 .modal--form {
   width: min(90vw, 640px);
+  overflow: visible;
+}
+
+.modal--form .modal__content,
+.modal--form .modal__body,
+.modal--form .modal__fields,
+.modal--form .modal__field {
+  overflow: visible;
 }
 
 .modal__content {
@@ -115,6 +123,7 @@
   width: auto;
   max-height: 240px;
   overflow-y: auto;
+  z-index: 30;
 }
 
 /* Modal Card Base */
